--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-	<title>Кулук Хомус</title>
+	<title>HomusFilm</title>
 
 	<link rel="stylesheet" href="jquery.countdown.css">
 	<link rel="stylesheet" href="styles.css">
@@ -16,17 +16,18 @@
 </head>
 
 <body>
+	<img src="bg.jpg" id="bg">
 	<div id="container">
 		<h1 id="timer"></h1>
 
-		<iframe id="homus" width="683" height="384" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		<!-- <iframe id="homus" width="683" height="384" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
 	</div>
 
-	<img id="logo" src="logo.png" alt="Кулук Хомус" draggable="false">
+	<!-- <img id="logo" src="logo.png" alt="Кулук Хомус" draggable="false"> -->
 
 	<script type="text/javascript">
 		$(function() {
-			var ts = new Date('July 18, 2018 10:40:00').getTime();
+			var ts = new Date('July 18, 2019 10:40:00').getTime();
 			var newYear = true;
 
 			$('#timer').countdown({
